testing out movies.js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li><a href="./notes_stuff/reviewers.html" id="reviewers">Reviewers</a></li>
         <li><a href="about.html">About Page</a></li>
         <li><a href="hello.html">Hello</a></li>
+        <li><a href="movies.html">Movies</a></li>
     </ul>
 </body>
 </html>
