put db integration (let's hope ts works)

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <title>Tesseau About</title>
 </head>
 <body>
-    <p>Simple Website made by Gerro Abarabar of 11 - Tesla</p>
+    <h1>About</h1>
+    <p>Website for 11 - Tesseau (S.Y. 2025-2026)</p>
+    <p>This is a simple website made by Gerro Abarabar of 11 - Tesla</p>
 </body>
 </html>
