--- a/notes_stuff/reviewers.html
+++ b/notes_stuff/reviewers.html
@@ -10,12 +10,11 @@
     <script>
         console.log("Fetching reviewers...");
         fetch("/api/reviewers")
-            .then(response => {response.json();
-            console.log("Fetched reviewers."+ data.stringify());})
+            .then(response => response.json())
             .then(data => {
                 console.log(data);
                 const reviewers = document.getElementById("reviewers");
-                data.forEach(reviewer => {
+                data.results.forEach(reviewer => {
                     const li = document.createElement("li");
                     li.textContent = reviewer.title;
                     reviewers.appendChild(li);
