--- a/notes_stuff/reviewers.html
+++ b/notes_stuff/reviewers.html
@@ -16,8 +16,7 @@
                 const reviewers = document.getElementById("reviewers");
                 data.forEach(reviewer => {
                     const li = document.createElement("li");
-                    li.textContent = reviewer.title;
-                    li.setAttribute("href", `/reviewer.html?id=${reviewer.id}`);
+                    li.innerHTML = `<a href="/reviewer.html?id=${reviewer.id}">${reviewer.title}</a>`;
                     reviewers.appendChild(li);
                 });
             });
