--- a/notes_stuff/reviewers.html
+++ b/notes_stuff/reviewers.html
@@ -3,10 +3,73 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tesseau Reviewers</title>
+    
+    <!-- remove this when prod starts-->
+    <meta http-equiv="Content-Security-Policy" 
+      content="script-src 'self' https://apis.google.com https://accounts.google.com https://www.gstatic.com 'unsafe-inline';">
 </head>
 <body>
-    <ul id = "reviewers">
-    </ul>
+    <ul id="reviewers"></ul>
+
+    <!-- Google API loader -->
+    <script src="https://apis.google.com/js/api.js"></script>
+
+    <script>
+        // === CONFIG ===
+        const developerKey = "AIzaSyDQ4Xgj7yvKt6qH9JxXmUWk5Jr3nXm3nXm3n";   // API Key
+        const clientId = "661671724651-g991at5eiurrroi8aojjnmj8jit9agas.apps.googleusercontent.com"; // OAuth Client ID
+        const appId = "661671724651";   // numeric project number (Cloud Console → Project Settings)
+        const scope = "https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/drive.readonly";
+
+        let oauthToken;
+
+        // === AUTH + PICKER ===
+        function onApiLoad() {
+            gapi.load("client:auth2", initAuth);
+        }
+
+        function initAuth() {
+            gapi.auth2.init({ client_id: clientId }).then(() => {
+                console.log("Auth2 initialized");
+            });
+        }
+
+        function handleAuthClick() {
+            gapi.auth2.getAuthInstance().signIn({ scope: scope }).then(user => {
+                oauthToken = user.getAuthResponse().access_token;
+                createPicker();
+            });
+        }
+
+        function createPicker() {
+            gapi.load("picker", { callback: () => {
+                if (oauthToken) {
+                    const view = new google.picker.View(google.picker.ViewId.DOCS);
+                    const picker = new google.picker.PickerBuilder()
+                        .setAppId(appId)
+                        .setOAuthToken(oauthToken)
+                        .addView(view)
+                        .setDeveloperKey(developerKey)
+                        .setCallback(pickerCallback)
+                        .build();
+                    picker.setVisible(true);
+                }
+            }});
+        }
+
+        function pickerCallback(data) {
+            if (data.action === google.picker.Action.PICKED) {
+                const file = data.docs[0];
+                alert(`You picked: ${file.name} (id: ${file.id})`);
+                // You could store file.id in your DB here
+            }
+        }
+
+        // Load auth API on page start
+        gapi.load("client:auth2", onApiLoad);
+    </script>
+
+    <!-- Existing reviewers list fetch -->
     <script>
         console.log("Fetching reviewers...");
         fetch("/api/reviewers")
@@ -16,7 +79,7 @@
                 const reviewers = document.getElementById("reviewers");
                 data.forEach(reviewer => {
                     const li = document.createElement("li");
-                    li.innerHTML = `<a href="/reviewer.html?id=${reviewer.id}">${reviewer.title}</a>`;
+                    li.innerHTML = `<a href="./reviewer.html?id=${reviewer.id}">${reviewer.title}</a>`;
                     reviewers.appendChild(li);
                 });
             });
@@ -40,7 +103,7 @@
                     description: description
                 };
 
-                fetch('/api/reviewers', {
+                fetch('/api/reviewers/new', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -56,9 +119,14 @@
                 });
             }
         </script>
+
+        <!-- Drive Picker trigger -->
+        <button onclick="handleAuthClick()">Pick a File</button>
+
+        <!-- Review submit form -->
         <form>
             <input type="text" id="name" placeholder="Enter your name" />
-            <input type="text" id="reviewer" placeholder="Enter your reviewer" /> <!-- TODO: make this a drive or file upload -->
+            <input type="text" id="reviewer" placeholder="Enter your reviewer" />
             <input type="text" id="title" placeholder="Enter your title" />
             <input type="text" id="subject" placeholder="Enter your subject" />
             <input type="text" id="description" placeholder="Enter your description" />
