--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <span class="logo">Tesseau</span>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="./notes_stuff/reviewers.html" id="reviewers">Reviewers</a></li>
+            <li><a href="notes_stuff/reviewers.html" id="reviewers">Reviewers</a></li>
             <li><a href="reminders.html">Reminders</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
