--- a/notes_stuff/reviewer.html
+++ b/notes_stuff/reviewer.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Reviewer</title>
   <style>
-    /* ✅ Make sure root fills viewport */
     html, body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -20,7 +19,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      flex-shrink: 0; /* ✅ Prevent header from shrinking */
+      flex-shrink: 0;
     }
 
     header h1 {
@@ -49,7 +48,6 @@
       background: #0056b3;
     }
 
-    /* ✅ Fill remaining viewport under header */
     .container {
       display: flex;
       flex: 1;
@@ -77,31 +75,81 @@
       border-left: 4px solid #007bff;
     }
 
-    /* ✅ Make content always fill height */
     .content {
       flex: 1;
       display: flex;
       flex-direction: column;
       height: 100%;
       overflow: hidden;
-      position: relative; /* ✅ allow absolute filling children */
+      position: relative;
     }
 
     .viewer, .about, .comments {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        overflow-y: auto;
-        padding: 20px;
-        box-sizing: border-box;
-        }
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      overflow-y: auto;
+      padding: 20px;
+      box-sizing: border-box;
+    }
 
     .hidden {
       display: none;
+    }
+
+    /* --- Comments section styles --- */
+    .comment-form {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 15px;
+    }
+
+    .comment-form input, .comment-form textarea {
+      padding: 8px;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .comment-form input {
+      width: 150px;
+    }
+
+    .comment-form textarea {
+      flex: 1;
+      resize: vertical;
+      min-height: 50px;
+    }
+
+    .comment-form button {
+      background: #007bff;
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .comment-form button:hover {
+      background: #0056b3;
+    }
+
+    .comment-list {
+      margin-top: 10px;
+    }
+
+    .comment-item {
+      border-bottom: 1px solid #ddd;
+      padding: 8px 0;
+    }
+
+    .comment-meta {
+      font-size: 12px;
+      color: #666;
     }
   </style>
 </head>
@@ -118,10 +166,17 @@
     <div class="sidebar" id="sidebar"></div>
 
     <div class="content">
-      <div id="viewer-container" class = "viewer"></div>
+      <div id="viewer-container" class="viewer"></div>
       <div id="about" class="hidden"></div>
-      <div id="comments" class="hidden">
-        <p><em>Comments section coming soon...</em></p>
+
+      <!-- Comments -->
+      <div id="comments" class="hidden comments">
+        <form id="commentForm" class="comment-form">
+          <input type="text" id="commentAuthor" placeholder="Your name (or anonymous)" />
+          <textarea id="commentText" placeholder="Write a comment..."></textarea>
+          <button type="submit">Send</button>
+        </form>
+        <div id="commentList" class="comment-list"></div>
       </div>
     </div>
   </div>
@@ -139,6 +194,7 @@
         const sidebar = document.getElementById("sidebar");
         const viewerContainer = document.getElementById("viewer-container");
         const aboutDiv = document.getElementById("about");
+        const commentsDiv = document.getElementById("comments");
 
         let reviewers = [];
         try {
@@ -158,7 +214,6 @@
             document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
             tab.classList.add("active");
 
-
             viewerContainer.innerHTML = `
               <iframe 
                 class="viewer"
@@ -168,7 +223,7 @@
             `;
 
             aboutDiv.classList.add("hidden");
-            document.getElementById("comments").classList.add("hidden");
+            commentsDiv.classList.add("hidden");
             viewerContainer.classList.remove("hidden");
           });
 
@@ -192,14 +247,13 @@
         aboutTab.addEventListener("click", () => {
           document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
           aboutTab.classList.add("active");
-          viewerContainer.innerHTML = "";
           viewerContainer.classList.add("hidden");
           aboutDiv.innerHTML = `
             <p><strong>Subject:</strong> ${data.subject}</p>
             <p><strong>Description:</strong> ${data.description}</p>
           `;
           aboutDiv.classList.remove("hidden");
-          document.getElementById("comments").classList.add("hidden");
+          commentsDiv.classList.add("hidden");
         });
 
         // Comments tab
@@ -211,11 +265,52 @@
         commentsTab.addEventListener("click", () => {
           document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
           commentsTab.classList.add("active");
-          viewerContainer.innerHTML = "";
           aboutDiv.classList.add("hidden");
           viewerContainer.classList.add("hidden");
-          document.getElementById("comments").classList.remove("hidden");
+          commentsDiv.classList.remove("hidden");
         });
+
+        // Comment form handling
+        const form = document.getElementById("commentForm");
+        const commentList = document.getElementById("commentList");
+
+        form.addEventListener("submit", (e) => {
+          e.preventDefault();
+
+          const author = document.getElementById("commentAuthor").value.trim() || "Anonymous";
+          const commentText = document.getElementById("commentText").value.trim();
+          if (!commentText) return;
+
+          const newComment = {
+            author,
+            comment: commentText,
+            likes: 0,
+            date_added: new Date().toISOString(),
+            reviewer_id: id
+          };
+
+          fetch("/api/comments/new", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(newComment)
+          })
+          .then(res => res.json())
+          .then(saved => {
+            addCommentToList(saved);
+            form.reset();
+          })
+          .catch(err => console.error("Error saving comment:", err));
+        });
+
+        function addCommentToList(comment) {
+          const div = document.createElement("div");
+          div.classList.add("comment-item");
+          div.innerHTML = `
+            <p>${comment.comment}</p>
+            <div class="comment-meta">— ${comment.creator}, ${new Date(comment.date_added).toLocaleString()}</div>
+          `;
+          commentList.prepend(div);
+        }
       })
       .catch(error => {
         console.error('Error fetching reviewer data:', error);
