--- a/about.html
+++ b/about.html
@@ -1,93 +1,133 @@
 <!DOCTYPE html>
-<style>
-    body {
-        font-family: 'Segoe UI', Arial, sans-serif;
-        background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
-        padding: 0;
-        min-height: 100vh;
-    }
-    .container {
-        max-width: 600px;
-        margin: 60px auto;
-        background: #fff;
-        border-radius: 18px;
-        box-shadow: 0 8px 32px rgba(44, 62, 80, 0.12);
-        padding: 40px 32px;
-        text-align: center;
-    }
-    h1 {
-        font-size: 2.5rem;
-        color: #2d5fa4;
-        margin-bottom: 18px;
-        letter-spacing: 2px;
-    }
-    li, p {
-        font-size: 1.15rem;
-        color: #444;
-        margin-bottom: 16px;
-    }
-    .image-container img{
-        margin-left: 10px;
-    }
-    .navbar {
-            background: #2d3748;
-            padding: 0.5em 2em;
-            display: flex;
-            align-items: center;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-        }
-        .navbar .logo {
-            font-weight: 700;
-            font-size: 1.5em;
-            color: #fff;
-            margin-right: 2em;
-            letter-spacing: 2px;
-        }
-        .navbar ul {
-            list-style: none;
-            display: flex;
-            gap: 1.5em;
-            margin: 0;
-            padding: 0;
-        }
-        .navbar li {
-            display: inline;
-        }
-        .navbar a {
-            color: #e2e8f0;
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.2s;
-        }
-        .navbar a:hover {
-            color: #63b3ed;
-        }
-</style>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <title>Tesseau About</title>
+  <meta charset="UTF-8" />
+  <title>Tesseau About</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Montserrat', Arial, sans-serif;
+      background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column; /* stack navbar on top, content below */
+    }
+
+    .navbar {
+        background: #2d3748;
+        padding: 0 2em;
+        display: flex;
+        align-items: center;   /* ✅ vertical centering */
+        justify-content: flex-start; /* ✅ keep items on the left */
+        box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        height: 60px;          /* consistent height */
+        }
+
+        .navbar .logo {
+        font-weight: 700;
+        font-size: 1.5em;
+        color: #fff;
+        margin-right: 2em;
+        letter-spacing: 2px;
+        line-height: 1;        /* removes weird offset */
+        display: flex;
+        align-items: center;   /* ensure logo text vertically aligns */
+        }
+
+        .navbar ul {
+        list-style: none;
+        display: flex;
+        gap: 1.5em;
+        margin: 0;
+        padding: 0;
+        }
+
+        .navbar li {
+        display: flex;
+        align-items: center;   /* ✅ keeps links centered */
+        }
+
+        .navbar a {
+        color: #e2e8f0;
+        text-decoration: none;
+        font-weight: 500;
+        transition: color 0.2s;
+        }
+        .navbar a:hover {
+        color: #63b3ed;
+        }
+
+
+    .navbar a:hover {
+      color: #63b3ed;
+    }
+
+    .page {
+      flex: 1; /* take remaining space */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5vh 0; /* extra breathing room */
+    }
+
+    .container {
+      width: 75%;
+      height: 80%; /* leaves 10% top & bottom */
+      background: #fff;
+      border-radius: 18px;
+      box-shadow: 0 8px 32px rgba(44, 62, 80, 0.12);
+      padding: 40px 32px;
+      text-align: left;
+      overflow-y: auto; /* scroll if content is tall */
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #2d5fa4;
+      margin-bottom: 18px;
+      letter-spacing: 2px;
+    }
+
+    li, p {
+      font-size: 1.15rem;
+      color: #444;
+      margin-bottom: 16px;
+    }
+
+    .image-container img {
+      margin-left: 10px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  </style>
 </head>
 <body>
-    <nav class="navbar">
-        <span class="logo">Tesseau</span>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="notes_stuff/reviewers.html" id="reviewers">Reviewers</a></li>
-            <li><a href="reminders.html">Reminders</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-    </nav>
-    <h1>About</h1>
-    <p>Website for 11 - Tesseau (S.Y. 2025-2026)</p>
-    <span class = "image-container"><img src = "/assets/me.jpg" alt="Gerro Abarabar" width="135" height="135" style="border-radius: 50%; object-fit: cover; "></span>
-    <p>This is a simple website made by Gerro Abarabar of 11 - Tesla</p>
-    <p>Using the help of:</p>
+  <nav class="navbar">
+    <span class="logo">Tesseau</span>
     <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/notes_stuff/reviewers.html">Reviewers</a></li>
+      <li><a href="/reminders.html">Reminders</a></li>
+      <li><a href="/about.html">About</a></li>
+    </ul>
+  </nav>
+
+  <div class="page">
+    <div class="container">
+      <h1>About us</h1>
+      <p>Website for 11 - Tesseau (S.Y. 2025-2026)</p>
+      <span class="image-container">
+        <img src="/assets/me.jpg" alt="Gerro Abarabar" width="135" height="135">
+      </span>
+      <p>This is a simple website made by Gerro Abarabar of 11 - Tesla</p>
+      <p>Using the help of:</p>
+      <ul>
         <li>ChatGPT - for coding assistance and suggestions</li>
         <li>GitHub Copilot - for code completion and ideas</li>
         <li>Google - for searching and learning</li>
         <li>Windsurf - for code completions</li>
-    </ul>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
