--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
     <nav class="navbar">
         <span class="logo">Tesseau</span>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="notes_stuff/reviewers.html" id="reviewers">Reviewers</a></li>
-            <li><a href="reminders.html">Reminders</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/notes_stuff/reviewers.html" id="reviewers">Reviewers</a></li>
+            <li><a href="/reminders.html">Reminders</a></li>
+            <li><a href="/about.html">About</a></li>
         </ul>
     </nav>
     <div class="container">
