--- a/notes_stuff/reviewers.html
+++ b/notes_stuff/reviewers.html
@@ -162,10 +162,10 @@
   <header>
     <nav style="background: #6366f1; border-radius: 8px; padding: 0.5rem 1rem; margin-bottom: 1rem;">
       <ul style="display: flex; gap: 2rem; list-style: none; margin: 0; padding: 0;">
-        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="/index.html" class="nav-link">Home</a></li>
         <li><a href="reviewers.html" class="nav-link">Reviewers</a></li>
-        <li><a href="reminders.html" class="nav-link">Reminders</a></li>
-        <li><a href="about.html" class ="nav-link">About</a></li>
+        <li><a href="/reminders.html" class="nav-link">Reminders</a></li>
+        <li><a href="/about.html" class ="nav-link">About</a></li>
       </ul>
     </nav>
     <style>
