--- a/notes_stuff/reviewer.html
+++ b/notes_stuff/reviewer.html
@@ -306,15 +306,24 @@
           const div = document.createElement("div");
           div.classList.add("comment-item");
           div.innerHTML = `
-            <p>${comment.comment}</p>
-            <div class="comment-meta">— ${comment.creator}, ${new Date(comment.date_added).toLocaleString()}</div>
+            <p>${comment.content}</p>
+            <div class="comment-meta">— ${comment.author}, ${new Date(comment.date_added).toLocaleString()}</div>
           `;
           commentList.prepend(div);
         }
+        fetch(`/api/comments/${id}`)
+        .then(response => response.json())
+        .then(data => {
+          data.results.forEach(comment => {
+            addCommentToList(comment);
+            console.log("added new comment: ",comment);
+          });
+        });
       })
       .catch(error => {
         console.error('Error fetching reviewer data:', error);
       });
+      
   </script>
 </body>
 </html>
