removed unnecessary icon

--- a/notes_stuff/reviewer.html
+++ b/notes_stuff/reviewer.html
@@ -159,7 +159,7 @@
       <h1 id="title"></h1>
       <p id="creator"></p>
     </div>
-    <a href="/notes_stuff/reviewers" class="back-btn">← Back</a>
+    <a href="/notes_stuff/reviewers" class="back-btn">Back</a>
   </header>
 
   <div class="container">
