added comments system

--- a/about.html
+++ b/about.html
@@ -127,6 +127,10 @@
         <li>Google - for searching and learning</li>
         <li>Windsurf - for code completions</li>
       </ul>
+      <blockquote>
+        <p>&ldquo;I don't know how to code html. Thanks chatgpt lmao&rdquo;</p>
+        <footer>&mdash; Gerro</footer>
+      </blockquote>
     </div>
   </div>
 </body>
